Fix issue with comment and topic spacing

--- a/client/stylesheets/components.import.less
+++ b/client/stylesheets/components.import.less
@@ -378,8 +378,8 @@
   background-color: #fafafa;
   cursor: pointer;
 }
-.comment-item,
-.topic-item {
+.list-item.comment-item,
+.list-item.topic-item {
   margin-bottom: 20px;
 }
 .topic-item.has-comment { 
